docs/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocpp2mqtt-service
  namespace: ocpp2mqtt
spec:
  selector:
    app: ocpp2mqtt
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
