docs/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocpp2mqtt-ingress
  namespace: ocpp2mqtt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/websocket-services: "ocpp2mqtt-service"
spec:
  rules:
  - host: ocpp2mqtt.xxx.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ocpp2mqtt-service
            port:
              number: 3000
